mostly cosmetic changes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,9 @@
   <title>It Could Be Honolulu | Photography</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= csrf_meta_tags %>
+  <!-- typekit -->
+  <!-- <script type="text/javascript" src="//use.typekit.net/yfd5ila.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script> -->
 </head>
 <body>
 <!-- navigation -->
