--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -35,8 +35,103 @@ body {
 // Example:
 // @linkColor: #ff0000;
 
+// Highlight
+:-moz-selection {
+  background: #ff9e9c;
+  text-shadow: none;
+}
+
+::selection {
+  background: #ff9e9c;
+  text-shadow: none;
+}
+
 // Navigation
 @navbarHeight: 100px;
-@navbarBackground: #fff;
-@navbarBackgroundHighlight: #fff;
+@navbarBackground: white;
+@navbarBackgroundHighlight: white;
 @navbarLinkColor: #000;
+@navbarLinkColorHover: #6c6c6c;
+@navbarLinkBackgroundHover: #fff;
+
+.brand {
+  font-family: "pill-gothic-300mg", proxima-nova, helvetica, arial, sans-serif;
+  text-transform: uppercase; 
+  font-style: normal; 
+  font-variant: normal;
+  letter-spacing: 5px;
+}
+
+.brand &:hover {
+    color: #000;
+    background-color: #fff;
+}
+
+.navbar .brand {
+  font-weight: bold;
+}
+
+// Dropdowns
+@dropdownBackground: black;
+@dropdownBorder: rgba(0,0,0,0);
+@dropdownLinkColor: white;
+@dropdownLinkColorHover: #6c6c6c; 
+@dropdownLinkBackgroundHover: @linkColor;
+
+.dropdown-menu li > a:hover,
+.dropdown-menu li > a:focus,
+.dropdown-submenu:hover > a {
+  text-decoration: none;
+  color: #6c6c6c;
+  background-color: #000;
+  background-image: -moz-linear-gradient(top, #000, #000);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#000), to(#000));
+  background-image: -webkit-linear-gradient(top, #000, #000);
+  background-image: -o-linear-gradient(top, #000, #000);
+  background-image: linear-gradient(to bottom, #000, #000);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0);
+  background-color: #000;
+  background-image: -moz-linear-gradient(top, #000, #000);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#000), to(#000));
+  background-image: -webkit-linear-gradient(top, #000, #000);
+  background-image: -o-linear-gradient(top, #000, #000);
+  background-image: linear-gradient(to bottom, #000, #000);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0);
+}
+
+// Carousel
+.carousel img {
+    margin: auto;
+}
+
+.carousel-caption {
+  background: rgba(0, 0, 0, 0.90);
+  color: #fff; 
+  font-family: "pill-gothic-300mg", proxima-nova, helvetica, arial, sans-serif;
+  text-transform: uppercase; 
+  font-style: normal; 
+  font-variant: normal; 
+  font-weight: bold; 
+  letter-spacing: 10px; 
+  text-align: center; 
+  max-width: 650px;
+  margin: auto;
+  bottom: 50%;
+}
+
+// Form styles
+.form {
+  max-width: 300px;
+  padding: 19px 29px 29px;
+  margin: 0 auto 20px;
+  background-color: #f5f5f5;
+  border: 1px solid #e5e5e5;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+  -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+  box-shadow: 0 1px 2px rgba(0,0,0,.05);
+}
