--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,41 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
-
+<div id="myCarousel" class="carousel slide">
+  <div class="carousel-inner">
+    <% @photos.each_with_index do |photo, index| %>
+      <% if index == 0 %>
+      <div class="item active">
+        <img src="<%= photo.image_url(:large) %>" alt="<%= photo.title %>">
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>IT COULD BE HONOLULU</h1>
+          </div>
+        </div>
+      </div>
+      <% end %>
+      <% if index == 1 %>
+      <div class="item">
+        <img src="<%= photo.image_url(:large) %>" alt="<%= photo.title %>">
+      </div>
+      <% end %>
+      <% if index == 2 %>
+      <div class="item">
+        <img src="<%= photo.image_url(:large) %>" alt="<%= photo.title %>">
+      </div>
+      <% end %>
+      <% if index == 3 %>
+      <div class="item">
+        <img src="<%= photo.image_url(:large) %>" alt="<%= photo.title %>">
+      </div>
+      <% end %>
+      <% if index == 4 %>
+      <div class="item">
+        <img src="<%= photo.image_url(:large) %>" alt="<%= photo.title %>">
+      </div>
+      <% end %>
+      <% if index == 4 %>
+      <div class="item">
+        <img src="<%= photo.image_url(:large) %>" alt="<%= photo.title %>">
+      </div>
+      <% end %>
+    <% end %>
+  </div>
+</div><!-- /.carousel -->
