--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,11 +6,19 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <a class="brand" href="#">ICBH</a>
+      <%= link_to 'ICBH', root_path, :class => "brand" %>
       <div class="nav-collapse collapse">
         <ul class="nav">
-          <li><%= link_to "Home", root_path %></li>
-          <li><%= link_to "Photos", photos_path %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Photos</a>
+            <ul class="dropdown-menu">
+              <li>
+              <% tag_cloud Photo.tag_counts, %w[s m l] do |tag, css_class| %>
+                <%= link_to tag.name, tag_path(tag.name), class: css_class %>
+              <% end %>
+              </li>
+            </ul>
+          </li>
           <li><%= link_to "About", about_path %></li>
           <li><%= link_to "Stimulus", stimulus_path %></li>
           <li><a href="http://itcouldbehonolulu.tumblr.com/">Blog</a></li>
