--- a/app/views/photos/edit.html.erb
+++ b/app/views/photos/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing photo</h1>
+<div class="form">
+  <h1>Editing photo</h1>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Show', @photo %> |
-<%= link_to 'Back', photos_path %>
+  <%= link_to 'Show', @photo %> |
+  <%= link_to 'Back', photos_path %>
+</div>
