--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New photo</h1>
+<div class="form">
+  <h1>New photo</h1>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Back', photos_path %>
+  <%= link_to 'Back', photos_path %>
+</div>
