--- a/app/views/home/stimulus.html.erb
+++ b/app/views/home/stimulus.html.erb
@@ -1,2 +1,16 @@
-<h1>Home#stimulus</h1>
-<p>Find me in app/views/home/stimulus.html.erb</p>
+<div class="row">
+  <div class="span4">
+    <h4>Stimulus</h4>
+    <hr>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p><br>
+
+    <ul class="unstyled">
+      <li><a href="http://coldam.com/">Cold AM</a></li><br>
+      <li><a href="http://thexraymachines.tumblr.com/">The XRAY MACHINEs</a></li><br>
+      <li><a href="http://www.tinyvices.com/">TINY VICES photography</a></li><br>
+      <li><a href="http://www.vanguardfashion.com.au/">VANGUARD fashion</a></li><br>
+      <li><a href="http://dylanquirk.wordpress.com/">DYLAN QUIRK visual entrepeneur</a></li><br>
+      <li><a href="http://kylethompsonphotography.com/">KYLE THOMPSON photography</a></li>
+    </ul>
+  </div>
+</div>
