--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,8 +10,9 @@
       <div class="nav-collapse collapse">
         <ul class="nav">
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Photos</a>
+            <a href="#" class="dropdown" data-toggle="dropdown">Photos</a>
             <ul class="dropdown-menu">
+              <li><%= link_to "All", photos_path %></li>
               <li>
               <% tag_cloud Photo.tag_counts, %w[s m l] do |tag, css_class| %>
                 <%= link_to tag.name, tag_path(tag.name), class: css_class %>
