--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,31 +1,14 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <b>Title:</b>
-  <%= @photo.title %>
-</p>
-
-<p>
-  <b>Usage:</b>
-  <%= @photo.usage %>
-</p>
-
-<p>
-  <b>Image:</b>
-  <%#= @photo.image %>
-  <%= image_tag @photo.image_url(:large).to_s %>
-</p>
-
-<p>
-  <b>Tag list:</b>
-  <%= @photo.tag_list %>
-</p>
-
-<p>
-  <b>Remote image url:</b>
-  <%= @photo.remote_image_url %>
-</p>
-
-
-<%= link_to 'Edit', edit_photo_path(@photo) %> |
-<%= link_to 'Back', photos_path %>
+<div class="row">
+  <div class="span8"><%= image_tag @photo.image_url(:large).to_s %></div>
+  <div class="span4">
+    <h4><%= @photo.title %></h4>
+    <hr>
+    <p>
+    <%= raw @photo.tag_list.map { |t| link_to t, tag_path(t)}.join(' ') %>
+    <% if admin_signed_in? %>
+     | <%= link_to 'Edit', edit_photo_path(@photo) %> |
+      <%= link_to 'Back', photos_path %> | <%= link_to 'Destroy', @photo, confirm: 'Are you sure?', method: :delete %>
+    <% end %>
+    </p>
+  </div>
+</div>
