--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -2,15 +2,10 @@
   <div class="span4">
     <h4>About</h4>
       <hr>
-      <p><b><%= mail_to("geoffrey.zabell@gmail.com", "Get in touch!", :encode => "hex", :subject => "How about we discuss it over a coffee?") %></p></b><br>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> 
+      <p>Currently residing in Brisbane, Australia. It Could Be Honolulu is a showcase of my personal and professional work.</p>
 
-      <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-      <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-      <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p><br>
-
+      <p>If you have any questions or queries please <b><%= mail_to("geoffrey.zabell@gmail.com", "email me", :encode => "hex", :subject => "How about we discuss it over a coffee?") %>.</b></p><br>
+      
       <div id="disqus_thread"></div>
         <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
