--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -12,14 +12,14 @@ body {
 // Set the Font Awesome (Font Awesome is default. You can disable by commenting below lines)
 // Note: If you use asset_path() here, your compiled bootstrap_and_overrides.css will not
 //       have the proper paths. So for now we use the absolute path.
-// @fontAwesomeEotPath: asset-path("fontawesome-webfont.eot");
-// @fontAwesomeEotPath_iefix: asset-path("fontawesome-webfont.eot#iefix");
-// @fontAwesomeWoffPath: asset-path("fontawesome-webfont.woff");
-// @fontAwesomeTtfPath: asset-path("fontawesome-webfont.ttf");
-// @fontAwesomeSvgPath: asset-path("fontawesome-webfont.svg");
+@fontAwesomeEotPath: asset-path("fontawesome-webfont.eot");
+@fontAwesomeEotPath_iefix: asset-path("fontawesome-webfont.eot#iefix");
+@fontAwesomeWoffPath: asset-path("fontawesome-webfont.woff");
+@fontAwesomeTtfPath: asset-path("fontawesome-webfont.ttf");
+@fontAwesomeSvgPath: asset-path("fontawesome-webfont.svg");
 
 // Font Awesome
-// @import "fontawesome";
+@import "fontawesome";
 
 // Glyphicons
 //@import "twitter/bootstrap/sprites.less";
@@ -182,8 +182,12 @@ h1 {
   text-transform: uppercase;
 }
 
-////////// Image padding ////////// 
+////////// Span padding //////////
 
 .span8 {
+  padding-bottom: 20px;
+}
+
+.span4 {
   padding-bottom: 20px;
 }
