test typekit fix

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -57,7 +57,7 @@ body {
 @navbarLinkBackgroundHover: #fff;
 
 .brand {
-  font-family: "pill-gothic-300mg", proxima-nova, helvetica, arial, sans-serif;
+  font-family: "pill-gothic-300mg", sans-serif;
   text-transform: uppercase; 
   font-style: normal; 
   font-variant: normal;
@@ -113,7 +113,7 @@ body {
 .carousel-caption {
   background: rgba(0, 0, 0, 0.90);
   color: #fff; 
-  font-family: "pill-gothic-300mg", proxima-nova, helvetica, arial, sans-serif;
+  font-family: "pill-gothic-300mg", sans-serif;
   text-transform: uppercase; 
   font-style: normal; 
   font-variant: normal; 
@@ -164,7 +164,7 @@ p, ol, td, ul {
 
 h4 {
   color: #000; 
-  font-family: "pill-gothic-300mg", proxima-nova, helvetica, arial, sans-serif; 
+  font-family: "pill-gothic-300mg", sans-serif; 
   font-style: normal; 
   font-variant: normal; 
   font-weight: bold; 
@@ -174,7 +174,7 @@ h4 {
 
 h1 {
   color: #fff; 
-  font-family: "pill-gothic-300mg", proxima-nova, helvetica, arial, sans-serif; 
+  font-family: "pill-gothic-300mg", sans-serif; 
   font-style: normal; 
   font-variant: normal; 
   font-weight: bold; 
