refactored index page carousel

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,41 +1,20 @@
 <div id="myCarousel" class="carousel slide">
   <div class="carousel-inner">
     <% @photos.each_with_index do |photo, index| %>
-      <% if index == 0 %>
-      <div class="item active">
-        <img src="<%= photo.image_url(:large) %>" alt="<%= photo.title %>">
-        <div class="container">
-          <div class="carousel-caption">
-            <h1>IT COULD BE HONOLULU</h1>
+      <% if index.zero? %>
+        <div class="item active">
+          <%= slider_image photo %>
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>IT COULD BE HONOLULU</h1>
+            </div>
           </div>
         </div>
-      </div>
-      <% end %>
-      <% if index == 1 %>
-      <div class="item">
-        <img src="<%= photo.image_url(:large) %>" alt="<%= photo.title %>">
-      </div>
-      <% end %>
-      <% if index == 2 %>
-      <div class="item">
-        <img src="<%= photo.image_url(:large) %>" alt="<%= photo.title %>">
-      </div>
-      <% end %>
-      <% if index == 3 %>
-      <div class="item">
-        <img src="<%= photo.image_url(:large) %>" alt="<%= photo.title %>">
-      </div>
-      <% end %>
-      <% if index == 4 %>
-      <div class="item">
-        <img src="<%= photo.image_url(:large) %>" alt="<%= photo.title %>">
-      </div>
-      <% end %>
-      <% if index == 5 %>
-      <div class="item">
-        <img src="<%= photo.image_url(:large) %>" alt="<%= photo.title %>">
-      </div>
+      <% else %>
+        <div class="item">
+          <%= slider_image photo %>
+        </div>
       <% end %>
     <% end %>
   </div>
-</div><!-- /.carousel -->
+</div>
