--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -2,9 +2,10 @@
   <div class="span4">
     <h4>About</h4>
       <hr>
-      <p>Currently residing in Brisbane, Australia. It Could Be Honolulu is a showcase of my personal and professional work.</p>
+      <p>Currently residing in Brisbane. It Could Be Honolulu is a showcase of Geoffrey's professional and personal work.</p>
 
-      <p>If you have any questions or queries please <b><%= mail_to("geoffrey.zabell@gmail.com", "email me", :encode => "hex", :subject => "How about we discuss it over a coffee?") %>.</b></p><br>
+      <p>If you have any questions or queries please <b><%= mail_to("geoffrey.zabell@gmail.com", "email me", :encode => "hex", :subject => "How about we discuss it over a coffee?") %>. Or follow me on <a href="https://www.facebook.com/ItcouldbeHonolulu">Facebook</a>, <a href="http://instagram.com/itcouldbehonolulu">Instagram</a> or <a href="http://itcouldbehonolulu.tumblr.com/
+">Tumblr</a>.</p><br>
       
       <div id="disqus_thread"></div>
         <script type="text/javascript">
