--- a/app/views/home/stimulus.html.erb
+++ b/app/views/home/stimulus.html.erb
@@ -9,7 +9,9 @@
       <li><a href="http://www.vanguardfashion.com.au/">VANGUARD fashion</a></li><br>
       <li><a href="http://dylanquirk.wordpress.com/">DYLAN QUIRK visual entrepeneur</a></li><br>
       <li><a href="http://kylethompsonphotography.com/">KYLE THOMPSON photography</a></li><br>
-      <li><a href="http://www.mustafahabdulaziz.com/">MUSTAFAH ABDULAZIZ</a></li>
+      <li><a href="http://www.mustafahabdulaziz.com/">MUSTAFAH ABDULAZIZ</a></li><br>
+      <li><a href="http://www.hungertv.com/">HUNGERtv</a></li><br>
+      <li><a href="http://photophilanthropy.org/">photoPHILANTHROPY</a></li>
     </ul>
   </div>
 </div>
