--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,7 +6,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <%= link_to 'ICBH', root_path, :class => "brand" %>
+      <a class="brand" href="<%= root_path %>"><%= image_tag("icbh-logo.png") %>ICBH</a>
+      <%#= link_to 'ICBH', image_tag("icbh-logo.png"), root_path, :class => "brand" %>
       <div class="nav-collapse collapse">
         <ul class="nav">
           <li class="dropdown">
