--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -2,9 +2,6 @@
   <div class="span4">
     <h4>About</h4>
       <hr>
-      <p>Currently residing in Brisbane. It Could Be Honolulu is a showcase of Geoffrey's professional and personal work.</p>
-
-      <p>If you have any questions or queries please <b><%= mail_to("geoffrey.zabell@gmail.com", "email me", :encode => "hex", :subject => "How about we discuss it over a coffee?") %>. Or follow me on <a href="https://www.facebook.com/ItcouldbeHonolulu">Facebook</a>, <a href="http://instagram.com/itcouldbehonolulu">Instagram</a> or <a href="http://itcouldbehonolulu.tumblr.com/
-">Tumblr</a>.</p><br>
+      <p>It Could Be Honolulu is a journal of Geoffrey Zabell’s professional and personal work. He currently resides in New York City. If you have any questions or queries please <%= mail_to("geoffrey.zabell@gmail.com", "email", :encode => "hex", :subject => "How about we discuss it over a coffee?") %>.</p>
   </div><!--/.span4 -->
 </div><!--/.row -->
